--- a/art.html
+++ b/art.html
@@ -38,7 +38,7 @@
 
                   <div class="mySlides fade">
                     <div class="numbertext">5 / 16</div>
-                    <img src="jailer.png" style="width:100%">
+                    <img src="img/jailer.jpg" style="width:100%">
                   </div>
 
                   <div class="mySlides fade">
@@ -53,7 +53,7 @@
 
                   <div class="mySlides fade">
                     <div class="numbertext">8 / 16</div>
-                    <img src="img/bodsol.png" style="width:100%">
+                    <img src="img/bodsol.jpg" style="width:100%">
                   </div>
 
                   <div class="mySlides fade">
@@ -63,7 +63,7 @@
 
                   <div class="mySlides fade">
                     <div class="numbertext">10 /16</div>
-                    <img src="img/czerno.png" style="width:100%">
+                    <img src="img/czerno.jpg" style="width:100%">
                   </div>
 
                   <div class="mySlides fade">
@@ -73,7 +73,7 @@
 
                   <div class="mySlides fade">
                     <div class="numbertext">12 /16</div>
-                    <img src="img/eagle.png" style="width:100%">
+                    <img src="img/eagle.jpg" style="width:100%">
                   </div>
                   <div class="mySlides fade">
                     <div class="numbertext">13 /16</div>
@@ -87,7 +87,7 @@
 
                   <div class="mySlides fade">
                     <div class="numbertext">15 / 16</div>
-                    <img src="img/headlights.png" style="width:100%">
+                    <img src="img/headlights.jpg" style="width:100%">
                   </div>
 
                   <div class="mySlides fade">
@@ -126,7 +126,7 @@
                  I prefer working with physical mediums mainly ink and paper and then tranferring into digital software like Adobe Illustrator and Photoshop.
                  The art style I work with in my liesure time is mainly reminiscent of russian prison tattoos mixed with folk art. 
             </div> -->
-            <div class="footer">XAOC<br>manerdig@gmail.com</div>
+            <!-- <div class="footer">XAOC<br>manerdig@gmail.com</div> -->
         </div>
     </body>
 </html>
