--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
         <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
 
     </head>
-    <body>
+    <body class="br">
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
