--- a/landing.html
+++ b/landing.html
@@ -15,9 +15,13 @@
 <img src="XAOCgif.gif">
 <body class="BG">
    <p class=comfy>
-        <a href="contact.html" target="blank">Contact</a> </br>
+        <a href="design2.html" target="blank">Design</a> </br>
+        <a href="art2.html" target="blank">Art</a> </br>
         <a href="https://www.redbubble.com/people/theyank?asc=u" target="blank">Store</a> </br>
-        <a href="art.html" target="blank">Art</a> </br>
+        <a href="contact.html" target="blank">Contact</a> </br>
+       
+        
    </p>
 </body>
+<footer class="footer">All work on this site is original</footer>
 </html>
